Primeros cambios en la base de datos terminada y arreglado los combobox

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -11,6 +11,67 @@ Home=Home
 Maintenance=Maintenance
 AppName=kgames
 
+AdministradorCreated=Administrador was successfully created.
+AdministradorUpdated=Administrador was successfully updated.
+AdministradorDeleted=Administrador was successfully deleted.
+CreateAdministradorTitle=Create New Administrador
+CreateAdministradorSaveLink=Save
+CreateAdministradorShowAllLink=Show All Administrador Items
+CreateAdministradorIndexLink=Index
+CreateAdministradorLabel_id=Id:
+CreateAdministradorRequiredMessage_id=The Id field is required.
+CreateAdministradorTitle_id=Id
+CreateAdministradorLabel_nombre=Nombre:
+CreateAdministradorRequiredMessage_nombre=The Nombre field is required.
+CreateAdministradorTitle_nombre=Nombre
+CreateAdministradorLabel_username=Username:
+CreateAdministradorRequiredMessage_username=The Username field is required.
+CreateAdministradorTitle_username=Username
+CreateAdministradorLabel_password=Password:
+CreateAdministradorRequiredMessage_password=The Password field is required.
+CreateAdministradorTitle_password=Password
+EditAdministradorTitle=Edit Administrador
+EditAdministradorSaveLink=Save
+EditAdministradorViewLink=View
+EditAdministradorShowAllLink=Show All Administrador Items
+EditAdministradorIndexLink=Index
+EditAdministradorLabel_id=Id:
+EditAdministradorRequiredMessage_id=The Id field is required.
+EditAdministradorTitle_id=Id
+EditAdministradorLabel_nombre=Nombre:
+EditAdministradorRequiredMessage_nombre=The Nombre field is required.
+EditAdministradorTitle_nombre=Nombre
+EditAdministradorLabel_username=Username:
+EditAdministradorRequiredMessage_username=The Username field is required.
+EditAdministradorTitle_username=Username
+EditAdministradorLabel_password=Password:
+EditAdministradorRequiredMessage_password=The Password field is required.
+EditAdministradorTitle_password=Password
+ViewAdministradorTitle=View
+ViewAdministradorDestroyLink=Destroy
+ViewAdministradorEditLink=Edit
+ViewAdministradorCreateLink=Create New Administrador
+ViewAdministradorShowAllLink=Show All Administrador Items
+ViewAdministradorIndexLink=Index
+ViewAdministradorLabel_id=Id:
+ViewAdministradorTitle_id=Id
+ViewAdministradorLabel_nombre=Nombre:
+ViewAdministradorTitle_nombre=Nombre
+ViewAdministradorLabel_username=Username:
+ViewAdministradorTitle_username=Username
+ViewAdministradorLabel_password=Password:
+ViewAdministradorTitle_password=Password
+ListAdministradorTitle=List
+ListAdministradorEmpty=(No Administrador Items Found)
+ListAdministradorDestroyLink=Destroy
+ListAdministradorEditLink=Edit
+ListAdministradorViewLink=View
+ListAdministradorCreateLink=Create New Administrador
+ListAdministradorIndexLink=Index
+ListAdministradorTitle_id=Id
+ListAdministradorTitle_nombre=Nombre
+ListAdministradorTitle_username=Username
+ListAdministradorTitle_password=Password
 ClienteCreated=Cliente was successfully created.
 ClienteUpdated=Cliente was successfully updated.
 ClienteDeleted=Cliente was successfully deleted.
@@ -99,6 +160,49 @@ ListClienteTitle_correo=Correo
 ListClienteTitle_direccion=Direccion
 ListClienteTitle_nacimiento=Nacimiento
 ListClienteTitle_pago=Pago
+CodigoCreated=Codigo was successfully created.
+CodigoUpdated=Codigo was successfully updated.
+CodigoDeleted=Codigo was successfully deleted.
+CreateCodigoTitle=Create New Codigo
+CreateCodigoSaveLink=Save
+CreateCodigoShowAllLink=Show All Codigo Items
+CreateCodigoIndexLink=Index
+CreateCodigoLabel_id=Id:
+CreateCodigoRequiredMessage_id=The Id field is required.
+CreateCodigoTitle_id=Id
+CreateCodigoLabel_codigo=Codigo:
+CreateCodigoRequiredMessage_codigo=The Codigo field is required.
+CreateCodigoTitle_codigo=Codigo
+EditCodigoTitle=Edit Codigo
+EditCodigoSaveLink=Save
+EditCodigoViewLink=View
+EditCodigoShowAllLink=Show All Codigo Items
+EditCodigoIndexLink=Index
+EditCodigoLabel_id=Id:
+EditCodigoRequiredMessage_id=The Id field is required.
+EditCodigoTitle_id=Id
+EditCodigoLabel_codigo=Codigo:
+EditCodigoRequiredMessage_codigo=The Codigo field is required.
+EditCodigoTitle_codigo=Codigo
+ViewCodigoTitle=View
+ViewCodigoDestroyLink=Destroy
+ViewCodigoEditLink=Edit
+ViewCodigoCreateLink=Create New Codigo
+ViewCodigoShowAllLink=Show All Codigo Items
+ViewCodigoIndexLink=Index
+ViewCodigoLabel_id=Id:
+ViewCodigoTitle_id=Id
+ViewCodigoLabel_codigo=Codigo:
+ViewCodigoTitle_codigo=Codigo
+ListCodigoTitle=List
+ListCodigoEmpty=(No Codigo Items Found)
+ListCodigoDestroyLink=Destroy
+ListCodigoEditLink=Edit
+ListCodigoViewLink=View
+ListCodigoCreateLink=Create New Codigo
+ListCodigoIndexLink=Index
+ListCodigoTitle_id=Id
+ListCodigoTitle_codigo=Codigo
 CompraCreated=Compra was successfully created.
 CompraUpdated=Compra was successfully updated.
 CompraDeleted=Compra was successfully deleted.
@@ -118,6 +222,9 @@ CreateCompraTitle_fecha=Fecha
 CreateCompraLabel_total=Total:
 CreateCompraRequiredMessage_total=The Total field is required.
 CreateCompraTitle_total=Total
+CreateCompraLabel_estado=Estado:
+CreateCompraRequiredMessage_estado=The Estado field is required.
+CreateCompraTitle_estado=Estado
 CreateCompraLabel_cliente=Cliente:
 CreateCompraRequiredMessage_cliente=The Cliente field is required.
 CreateCompraTitle_cliente=Cliente
@@ -144,6 +251,9 @@ EditCompraTitle_fecha=Fecha
 EditCompraLabel_total=Total:
 EditCompraRequiredMessage_total=The Total field is required.
 EditCompraTitle_total=Total
+EditCompraLabel_estado=Estado:
+EditCompraRequiredMessage_estado=The Estado field is required.
+EditCompraTitle_estado=Estado
 EditCompraLabel_cliente=Cliente:
 EditCompraRequiredMessage_cliente=The Cliente field is required.
 EditCompraTitle_cliente=Cliente
@@ -167,6 +277,8 @@ ViewCompraLabel_fecha=Fecha:
 ViewCompraTitle_fecha=Fecha
 ViewCompraLabel_total=Total:
 ViewCompraTitle_total=Total
+ViewCompraLabel_estado=Estado:
+ViewCompraTitle_estado=Estado
 ViewCompraLabel_cliente=Cliente:
 ViewCompraTitle_cliente=Cliente
 ViewCompraLabel_juego=Juego:
@@ -184,6 +296,7 @@ ListCompraTitle_id=Id
 ListCompraTitle_precio=Precio
 ListCompraTitle_fecha=Fecha
 ListCompraTitle_total=Total
+ListCompraTitle_estado=Estado
 ListCompraTitle_cliente=Cliente
 ListCompraTitle_juego=Juego
 ListCompraTitle_pago=Pago
@@ -209,6 +322,9 @@ CreateJuegoTitle_modoJuego=ModoJuego
 CreateJuegoLabel_precio=Precio:
 CreateJuegoRequiredMessage_precio=The Precio field is required.
 CreateJuegoTitle_precio=Precio
+CreateJuegoLabel_codigo=Codigo:
+CreateJuegoRequiredMessage_codigo=The Codigo field is required.
+CreateJuegoTitle_codigo=Codigo
 CreateJuegoLabel_plataforma=Plataforma:
 CreateJuegoRequiredMessage_plataforma=The Plataforma field is required.
 CreateJuegoTitle_plataforma=Plataforma
@@ -232,6 +348,9 @@ EditJuegoTitle_modoJuego=ModoJuego
 EditJuegoLabel_precio=Precio:
 EditJuegoRequiredMessage_precio=The Precio field is required.
 EditJuegoTitle_precio=Precio
+EditJuegoLabel_codigo=Codigo:
+EditJuegoRequiredMessage_codigo=The Codigo field is required.
+EditJuegoTitle_codigo=Codigo
 EditJuegoLabel_plataforma=Plataforma:
 EditJuegoRequiredMessage_plataforma=The Plataforma field is required.
 EditJuegoTitle_plataforma=Plataforma
@@ -251,6 +370,8 @@ ViewJuegoLabel_modoJuego=ModoJuego:
 ViewJuegoTitle_modoJuego=ModoJuego
 ViewJuegoLabel_precio=Precio:
 ViewJuegoTitle_precio=Precio
+ViewJuegoLabel_codigo=Codigo:
+ViewJuegoTitle_codigo=Codigo
 ViewJuegoLabel_plataforma=Plataforma:
 ViewJuegoTitle_plataforma=Plataforma
 ListJuegoTitle=List
@@ -265,6 +386,7 @@ ListJuegoTitle_nombre=Nombre
 ListJuegoTitle_pegi=Pegi
 ListJuegoTitle_modoJuego=ModoJuego
 ListJuegoTitle_precio=Precio
+ListJuegoTitle_codigo=Codigo
 ListJuegoTitle_plataforma=Plataforma
 PagoCreated=Pago was successfully created.
 PagoUpdated=Pago was successfully updated.
@@ -322,9 +444,6 @@ CreatePlataformaTitle_id=Id
 CreatePlataformaLabel_nombre=Nombre:
 CreatePlataformaRequiredMessage_nombre=The Nombre field is required.
 CreatePlataformaTitle_nombre=Nombre
-CreatePlataformaLabel_descripcion=Descripcion:
-CreatePlataformaRequiredMessage_descripcion=The Descripcion field is required.
-CreatePlataformaTitle_descripcion=Descripcion
 EditPlataformaTitle=Edit Plataforma
 EditPlataformaSaveLink=Save
 EditPlataformaViewLink=View
@@ -336,9 +455,6 @@ EditPlataformaTitle_id=Id
 EditPlataformaLabel_nombre=Nombre:
 EditPlataformaRequiredMessage_nombre=The Nombre field is required.
 EditPlataformaTitle_nombre=Nombre
-EditPlataformaLabel_descripcion=Descripcion:
-EditPlataformaRequiredMessage_descripcion=The Descripcion field is required.
-EditPlataformaTitle_descripcion=Descripcion
 ViewPlataformaTitle=View
 ViewPlataformaDestroyLink=Destroy
 ViewPlataformaEditLink=Edit
@@ -349,8 +465,6 @@ ViewPlataformaLabel_id=Id:
 ViewPlataformaTitle_id=Id
 ViewPlataformaLabel_nombre=Nombre:
 ViewPlataformaTitle_nombre=Nombre
-ViewPlataformaLabel_descripcion=Descripcion:
-ViewPlataformaTitle_descripcion=Descripcion
 ListPlataformaTitle=List
 ListPlataformaEmpty=(No Plataforma Items Found)
 ListPlataformaDestroyLink=Destroy
@@ -360,4 +474,195 @@ ListPlataformaCreateLink=Create New Plataforma
 ListPlataformaIndexLink=Index
 ListPlataformaTitle_id=Id
 ListPlataformaTitle_nombre=Nombre
-ListPlataformaTitle_descripcion=Descripcion
+RespuestaTicketCreated=RespuestaTicket was successfully created.
+RespuestaTicketUpdated=RespuestaTicket was successfully updated.
+RespuestaTicketDeleted=RespuestaTicket was successfully deleted.
+CreateRespuestaTicketTitle=Create New RespuestaTicket
+CreateRespuestaTicketSaveLink=Save
+CreateRespuestaTicketShowAllLink=Show All RespuestaTicket Items
+CreateRespuestaTicketIndexLink=Index
+CreateRespuestaTicketLabel_id=Id:
+CreateRespuestaTicketRequiredMessage_id=The Id field is required.
+CreateRespuestaTicketTitle_id=Id
+CreateRespuestaTicketLabel_respuesta=Respuesta:
+CreateRespuestaTicketRequiredMessage_respuesta=The Respuesta field is required.
+CreateRespuestaTicketTitle_respuesta=Respuesta
+CreateRespuestaTicketLabel_fecha=Fecha:
+CreateRespuestaTicketRequiredMessage_fecha=The Fecha field is required.
+CreateRespuestaTicketTitle_fecha=Fecha
+CreateRespuestaTicketLabel_administrador=Administrador:
+CreateRespuestaTicketRequiredMessage_administrador=The Administrador field is required.
+CreateRespuestaTicketTitle_administrador=Administrador
+CreateRespuestaTicketLabel_ticket=Ticket:
+CreateRespuestaTicketRequiredMessage_ticket=The Ticket field is required.
+CreateRespuestaTicketTitle_ticket=Ticket
+EditRespuestaTicketTitle=Edit RespuestaTicket
+EditRespuestaTicketSaveLink=Save
+EditRespuestaTicketViewLink=View
+EditRespuestaTicketShowAllLink=Show All RespuestaTicket Items
+EditRespuestaTicketIndexLink=Index
+EditRespuestaTicketLabel_id=Id:
+EditRespuestaTicketRequiredMessage_id=The Id field is required.
+EditRespuestaTicketTitle_id=Id
+EditRespuestaTicketLabel_respuesta=Respuesta:
+EditRespuestaTicketRequiredMessage_respuesta=The Respuesta field is required.
+EditRespuestaTicketTitle_respuesta=Respuesta
+EditRespuestaTicketLabel_fecha=Fecha:
+EditRespuestaTicketRequiredMessage_fecha=The Fecha field is required.
+EditRespuestaTicketTitle_fecha=Fecha
+EditRespuestaTicketLabel_administrador=Administrador:
+EditRespuestaTicketRequiredMessage_administrador=The Administrador field is required.
+EditRespuestaTicketTitle_administrador=Administrador
+EditRespuestaTicketLabel_ticket=Ticket:
+EditRespuestaTicketRequiredMessage_ticket=The Ticket field is required.
+EditRespuestaTicketTitle_ticket=Ticket
+ViewRespuestaTicketTitle=View
+ViewRespuestaTicketDestroyLink=Destroy
+ViewRespuestaTicketEditLink=Edit
+ViewRespuestaTicketCreateLink=Create New RespuestaTicket
+ViewRespuestaTicketShowAllLink=Show All RespuestaTicket Items
+ViewRespuestaTicketIndexLink=Index
+ViewRespuestaTicketLabel_id=Id:
+ViewRespuestaTicketTitle_id=Id
+ViewRespuestaTicketLabel_respuesta=Respuesta:
+ViewRespuestaTicketTitle_respuesta=Respuesta
+ViewRespuestaTicketLabel_fecha=Fecha:
+ViewRespuestaTicketTitle_fecha=Fecha
+ViewRespuestaTicketLabel_administrador=Administrador:
+ViewRespuestaTicketTitle_administrador=Administrador
+ViewRespuestaTicketLabel_ticket=Ticket:
+ViewRespuestaTicketTitle_ticket=Ticket
+ListRespuestaTicketTitle=List
+ListRespuestaTicketEmpty=(No RespuestaTicket Items Found)
+ListRespuestaTicketDestroyLink=Destroy
+ListRespuestaTicketEditLink=Edit
+ListRespuestaTicketViewLink=View
+ListRespuestaTicketCreateLink=Create New RespuestaTicket
+ListRespuestaTicketIndexLink=Index
+ListRespuestaTicketTitle_id=Id
+ListRespuestaTicketTitle_respuesta=Respuesta
+ListRespuestaTicketTitle_fecha=Fecha
+ListRespuestaTicketTitle_administrador=Administrador
+ListRespuestaTicketTitle_ticket=Ticket
+TicketCreated=Ticket was successfully created.
+TicketUpdated=Ticket was successfully updated.
+TicketDeleted=Ticket was successfully deleted.
+CreateTicketTitle=Create New Ticket
+CreateTicketSaveLink=Save
+CreateTicketShowAllLink=Show All Ticket Items
+CreateTicketIndexLink=Index
+CreateTicketLabel_id=Id:
+CreateTicketRequiredMessage_id=The Id field is required.
+CreateTicketTitle_id=Id
+CreateTicketLabel_descripcion=Descripcion:
+CreateTicketRequiredMessage_descripcion=The Descripcion field is required.
+CreateTicketTitle_descripcion=Descripcion
+CreateTicketLabel_fecha=Fecha:
+CreateTicketRequiredMessage_fecha=The Fecha field is required.
+CreateTicketTitle_fecha=Fecha
+CreateTicketLabel_estado=Estado:
+CreateTicketRequiredMessage_estado=The Estado field is required.
+CreateTicketTitle_estado=Estado
+CreateTicketLabel_tipo=Tipo:
+CreateTicketRequiredMessage_tipo=The Tipo field is required.
+CreateTicketTitle_tipo=Tipo
+CreateTicketLabel_usuario=Usuario:
+CreateTicketRequiredMessage_usuario=The Usuario field is required.
+CreateTicketTitle_usuario=Usuario
+EditTicketTitle=Edit Ticket
+EditTicketSaveLink=Save
+EditTicketViewLink=View
+EditTicketShowAllLink=Show All Ticket Items
+EditTicketIndexLink=Index
+EditTicketLabel_id=Id:
+EditTicketRequiredMessage_id=The Id field is required.
+EditTicketTitle_id=Id
+EditTicketLabel_descripcion=Descripcion:
+EditTicketRequiredMessage_descripcion=The Descripcion field is required.
+EditTicketTitle_descripcion=Descripcion
+EditTicketLabel_fecha=Fecha:
+EditTicketRequiredMessage_fecha=The Fecha field is required.
+EditTicketTitle_fecha=Fecha
+EditTicketLabel_estado=Estado:
+EditTicketRequiredMessage_estado=The Estado field is required.
+EditTicketTitle_estado=Estado
+EditTicketLabel_tipo=Tipo:
+EditTicketRequiredMessage_tipo=The Tipo field is required.
+EditTicketTitle_tipo=Tipo
+EditTicketLabel_usuario=Usuario:
+EditTicketRequiredMessage_usuario=The Usuario field is required.
+EditTicketTitle_usuario=Usuario
+ViewTicketTitle=View
+ViewTicketDestroyLink=Destroy
+ViewTicketEditLink=Edit
+ViewTicketCreateLink=Create New Ticket
+ViewTicketShowAllLink=Show All Ticket Items
+ViewTicketIndexLink=Index
+ViewTicketLabel_id=Id:
+ViewTicketTitle_id=Id
+ViewTicketLabel_descripcion=Descripcion:
+ViewTicketTitle_descripcion=Descripcion
+ViewTicketLabel_fecha=Fecha:
+ViewTicketTitle_fecha=Fecha
+ViewTicketLabel_estado=Estado:
+ViewTicketTitle_estado=Estado
+ViewTicketLabel_tipo=Tipo:
+ViewTicketTitle_tipo=Tipo
+ViewTicketLabel_usuario=Usuario:
+ViewTicketTitle_usuario=Usuario
+ListTicketTitle=List
+ListTicketEmpty=(No Ticket Items Found)
+ListTicketDestroyLink=Destroy
+ListTicketEditLink=Edit
+ListTicketViewLink=View
+ListTicketCreateLink=Create New Ticket
+ListTicketIndexLink=Index
+ListTicketTitle_id=Id
+ListTicketTitle_descripcion=Descripcion
+ListTicketTitle_fecha=Fecha
+ListTicketTitle_estado=Estado
+ListTicketTitle_tipo=Tipo
+ListTicketTitle_usuario=Usuario
+TipoTicketCreated=TipoTicket was successfully created.
+TipoTicketUpdated=TipoTicket was successfully updated.
+TipoTicketDeleted=TipoTicket was successfully deleted.
+CreateTipoTicketTitle=Create New TipoTicket
+CreateTipoTicketSaveLink=Save
+CreateTipoTicketShowAllLink=Show All TipoTicket Items
+CreateTipoTicketIndexLink=Index
+CreateTipoTicketLabel_id=Id:
+CreateTipoTicketRequiredMessage_id=The Id field is required.
+CreateTipoTicketTitle_id=Id
+CreateTipoTicketLabel_nombre=Nombre:
+CreateTipoTicketRequiredMessage_nombre=The Nombre field is required.
+CreateTipoTicketTitle_nombre=Nombre
+EditTipoTicketTitle=Edit TipoTicket
+EditTipoTicketSaveLink=Save
+EditTipoTicketViewLink=View
+EditTipoTicketShowAllLink=Show All TipoTicket Items
+EditTipoTicketIndexLink=Index
+EditTipoTicketLabel_id=Id:
+EditTipoTicketRequiredMessage_id=The Id field is required.
+EditTipoTicketTitle_id=Id
+EditTipoTicketLabel_nombre=Nombre:
+EditTipoTicketRequiredMessage_nombre=The Nombre field is required.
+EditTipoTicketTitle_nombre=Nombre
+ViewTipoTicketTitle=View
+ViewTipoTicketDestroyLink=Destroy
+ViewTipoTicketEditLink=Edit
+ViewTipoTicketCreateLink=Create New TipoTicket
+ViewTipoTicketShowAllLink=Show All TipoTicket Items
+ViewTipoTicketIndexLink=Index
+ViewTipoTicketLabel_id=Id:
+ViewTipoTicketTitle_id=Id
+ViewTipoTicketLabel_nombre=Nombre:
+ViewTipoTicketTitle_nombre=Nombre
+ListTipoTicketTitle=List
+ListTipoTicketEmpty=(No TipoTicket Items Found)
+ListTipoTicketDestroyLink=Destroy
+ListTipoTicketEditLink=Edit
+ListTipoTicketViewLink=View
+ListTipoTicketCreateLink=Create New TipoTicket
+ListTipoTicketIndexLink=Index
+ListTipoTicketTitle_id=Id
+ListTipoTicketTitle_nombre=Nombre
