--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -100,6 +100,12 @@ CreateClienteTitle_nacimiento=Nacimiento
 CreateClienteLabel_pago=Pago:
 CreateClienteRequiredMessage_pago=The Pago field is required.
 CreateClienteTitle_pago=Pago
+CreateClienteLabel_username=Username:
+CreateClienteRequiredMessage_username=The Username field is required.
+CreateClienteTitle_username=Username
+CreateClienteLabel_password=Password:
+CreateClienteRequiredMessage_password=The Password field is required.
+CreateClienteTitle_password=Password
 EditClienteTitle=Edit Cliente
 EditClienteSaveLink=Save
 EditClienteViewLink=View
@@ -126,6 +132,12 @@ EditClienteTitle_nacimiento=Nacimiento
 EditClienteLabel_pago=Pago:
 EditClienteRequiredMessage_pago=The Pago field is required.
 EditClienteTitle_pago=Pago
+EditClienteLabel_username=Username:
+EditClienteRequiredMessage_username=The Username field is required.
+EditClienteTitle_username=Username
+EditClienteLabel_password=Password:
+EditClienteRequiredMessage_password=The Password field is required.
+EditClienteTitle_password=Password
 ViewClienteTitle=View
 ViewClienteDestroyLink=Destroy
 ViewClienteEditLink=Edit
@@ -146,6 +158,10 @@ ViewClienteLabel_nacimiento=Nacimiento:
 ViewClienteTitle_nacimiento=Nacimiento
 ViewClienteLabel_pago=Pago:
 ViewClienteTitle_pago=Pago
+ViewClienteLabel_username=Username:
+ViewClienteTitle_username=Username
+ViewClienteLabel_password=Password:
+ViewClienteTitle_password=Password
 ListClienteTitle=List
 ListClienteEmpty=(No Cliente Items Found)
 ListClienteDestroyLink=Destroy
@@ -160,6 +176,8 @@ ListClienteTitle_correo=Correo
 ListClienteTitle_direccion=Direccion
 ListClienteTitle_nacimiento=Nacimiento
 ListClienteTitle_pago=Pago
+ListClienteTitle_username=Username
+ListClienteTitle_password=Password
 CodigoCreated=Codigo was successfully created.
 CodigoUpdated=Codigo was successfully updated.
 CodigoDeleted=Codigo was successfully deleted.
@@ -300,6 +318,49 @@ ListCompraTitle_estado=Estado
 ListCompraTitle_cliente=Cliente
 ListCompraTitle_juego=Juego
 ListCompraTitle_pago=Pago
+EntregaCreated=Entrega was successfully created.
+EntregaUpdated=Entrega was successfully updated.
+EntregaDeleted=Entrega was successfully deleted.
+CreateEntregaTitle=Create New Entrega
+CreateEntregaSaveLink=Save
+CreateEntregaShowAllLink=Show All Entrega Items
+CreateEntregaIndexLink=Index
+CreateEntregaLabel_idkeyCod=IdkeyCod:
+CreateEntregaRequiredMessage_idkeyCod=The IdkeyCod field is required.
+CreateEntregaTitle_idkeyCod=IdkeyCod
+CreateEntregaLabel_idPago=IdPago:
+CreateEntregaRequiredMessage_idPago=The IdPago field is required.
+CreateEntregaTitle_idPago=IdPago
+EditEntregaTitle=Edit Entrega
+EditEntregaSaveLink=Save
+EditEntregaViewLink=View
+EditEntregaShowAllLink=Show All Entrega Items
+EditEntregaIndexLink=Index
+EditEntregaLabel_idkeyCod=IdkeyCod:
+EditEntregaRequiredMessage_idkeyCod=The IdkeyCod field is required.
+EditEntregaTitle_idkeyCod=IdkeyCod
+EditEntregaLabel_idPago=IdPago:
+EditEntregaRequiredMessage_idPago=The IdPago field is required.
+EditEntregaTitle_idPago=IdPago
+ViewEntregaTitle=View
+ViewEntregaDestroyLink=Destroy
+ViewEntregaEditLink=Edit
+ViewEntregaCreateLink=Create New Entrega
+ViewEntregaShowAllLink=Show All Entrega Items
+ViewEntregaIndexLink=Index
+ViewEntregaLabel_idkeyCod=IdkeyCod:
+ViewEntregaTitle_idkeyCod=IdkeyCod
+ViewEntregaLabel_idPago=IdPago:
+ViewEntregaTitle_idPago=IdPago
+ListEntregaTitle=List
+ListEntregaEmpty=(No Entrega Items Found)
+ListEntregaDestroyLink=Destroy
+ListEntregaEditLink=Edit
+ListEntregaViewLink=View
+ListEntregaCreateLink=Create New Entrega
+ListEntregaIndexLink=Index
+ListEntregaTitle_idkeyCod=IdkeyCod
+ListEntregaTitle_idPago=IdPago
 JuegoCreated=Juego was successfully created.
 JuegoUpdated=Juego was successfully updated.
 JuegoDeleted=Juego was successfully deleted.
