Agregada la tabla entrega y modificada y el key code ahora sale como texto.

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -97,15 +97,15 @@ CreateClienteTitle_direccion=Direccion
 CreateClienteLabel_nacimiento=Nacimiento:
 CreateClienteRequiredMessage_nacimiento=The Nacimiento field is required.
 CreateClienteTitle_nacimiento=Nacimiento
-CreateClienteLabel_pago=Pago:
-CreateClienteRequiredMessage_pago=The Pago field is required.
-CreateClienteTitle_pago=Pago
 CreateClienteLabel_username=Username:
 CreateClienteRequiredMessage_username=The Username field is required.
 CreateClienteTitle_username=Username
 CreateClienteLabel_password=Password:
 CreateClienteRequiredMessage_password=The Password field is required.
 CreateClienteTitle_password=Password
+CreateClienteLabel_pago=Pago:
+CreateClienteRequiredMessage_pago=The Pago field is required.
+CreateClienteTitle_pago=Pago
 EditClienteTitle=Edit Cliente
 EditClienteSaveLink=Save
 EditClienteViewLink=View
@@ -129,15 +129,15 @@ EditClienteTitle_direccion=Direccion
 EditClienteLabel_nacimiento=Nacimiento:
 EditClienteRequiredMessage_nacimiento=The Nacimiento field is required.
 EditClienteTitle_nacimiento=Nacimiento
-EditClienteLabel_pago=Pago:
-EditClienteRequiredMessage_pago=The Pago field is required.
-EditClienteTitle_pago=Pago
 EditClienteLabel_username=Username:
 EditClienteRequiredMessage_username=The Username field is required.
 EditClienteTitle_username=Username
 EditClienteLabel_password=Password:
 EditClienteRequiredMessage_password=The Password field is required.
 EditClienteTitle_password=Password
+EditClienteLabel_pago=Pago:
+EditClienteRequiredMessage_pago=The Pago field is required.
+EditClienteTitle_pago=Pago
 ViewClienteTitle=View
 ViewClienteDestroyLink=Destroy
 ViewClienteEditLink=Edit
@@ -156,12 +156,12 @@ ViewClienteLabel_direccion=Direccion:
 ViewClienteTitle_direccion=Direccion
 ViewClienteLabel_nacimiento=Nacimiento:
 ViewClienteTitle_nacimiento=Nacimiento
-ViewClienteLabel_pago=Pago:
-ViewClienteTitle_pago=Pago
 ViewClienteLabel_username=Username:
 ViewClienteTitle_username=Username
 ViewClienteLabel_password=Password:
 ViewClienteTitle_password=Password
+ViewClienteLabel_pago=Pago:
+ViewClienteTitle_pago=Pago
 ListClienteTitle=List
 ListClienteEmpty=(No Cliente Items Found)
 ListClienteDestroyLink=Destroy
@@ -175,9 +175,9 @@ ListClienteTitle_apellido=Apellido
 ListClienteTitle_correo=Correo
 ListClienteTitle_direccion=Direccion
 ListClienteTitle_nacimiento=Nacimiento
-ListClienteTitle_pago=Pago
 ListClienteTitle_username=Username
 ListClienteTitle_password=Password
+ListClienteTitle_pago=Pago
 CodigoCreated=Codigo was successfully created.
 CodigoUpdated=Codigo was successfully updated.
 CodigoDeleted=Codigo was successfully deleted.
@@ -325,33 +325,41 @@ CreateEntregaTitle=Create New Entrega
 CreateEntregaSaveLink=Save
 CreateEntregaShowAllLink=Show All Entrega Items
 CreateEntregaIndexLink=Index
-CreateEntregaLabel_idkeyCod=IdkeyCod:
-CreateEntregaRequiredMessage_idkeyCod=The IdkeyCod field is required.
-CreateEntregaTitle_idkeyCod=IdkeyCod
+CreateEntregaLabel_id=Id:
+CreateEntregaRequiredMessage_id=The Id field is required.
+CreateEntregaTitle_id=Id
 CreateEntregaLabel_idPago=IdPago:
 CreateEntregaRequiredMessage_idPago=The IdPago field is required.
 CreateEntregaTitle_idPago=IdPago
+CreateEntregaLabel_idkeyCod=IdkeyCod:
+CreateEntregaRequiredMessage_idkeyCod=The IdkeyCod field is required.
+CreateEntregaTitle_idkeyCod=IdkeyCod
 EditEntregaTitle=Edit Entrega
 EditEntregaSaveLink=Save
 EditEntregaViewLink=View
 EditEntregaShowAllLink=Show All Entrega Items
 EditEntregaIndexLink=Index
-EditEntregaLabel_idkeyCod=IdkeyCod:
-EditEntregaRequiredMessage_idkeyCod=The IdkeyCod field is required.
-EditEntregaTitle_idkeyCod=IdkeyCod
+EditEntregaLabel_id=Id:
+EditEntregaRequiredMessage_id=The Id field is required.
+EditEntregaTitle_id=Id
 EditEntregaLabel_idPago=IdPago:
 EditEntregaRequiredMessage_idPago=The IdPago field is required.
 EditEntregaTitle_idPago=IdPago
+EditEntregaLabel_idkeyCod=IdkeyCod:
+EditEntregaRequiredMessage_idkeyCod=The IdkeyCod field is required.
+EditEntregaTitle_idkeyCod=IdkeyCod
 ViewEntregaTitle=View
 ViewEntregaDestroyLink=Destroy
 ViewEntregaEditLink=Edit
 ViewEntregaCreateLink=Create New Entrega
 ViewEntregaShowAllLink=Show All Entrega Items
 ViewEntregaIndexLink=Index
-ViewEntregaLabel_idkeyCod=IdkeyCod:
-ViewEntregaTitle_idkeyCod=IdkeyCod
+ViewEntregaLabel_id=Id:
+ViewEntregaTitle_id=Id
 ViewEntregaLabel_idPago=IdPago:
 ViewEntregaTitle_idPago=IdPago
+ViewEntregaLabel_idkeyCod=IdkeyCod:
+ViewEntregaTitle_idkeyCod=IdkeyCod
 ListEntregaTitle=List
 ListEntregaEmpty=(No Entrega Items Found)
 ListEntregaDestroyLink=Destroy
@@ -359,8 +367,9 @@ ListEntregaEditLink=Edit
 ListEntregaViewLink=View
 ListEntregaCreateLink=Create New Entrega
 ListEntregaIndexLink=Index
-ListEntregaTitle_idkeyCod=IdkeyCod
+ListEntregaTitle_id=Id
 ListEntregaTitle_idPago=IdPago
+ListEntregaTitle_idkeyCod=IdkeyCod
 JuegoCreated=Juego was successfully created.
 JuegoUpdated=Juego was successfully updated.
 JuegoDeleted=Juego was successfully deleted.
