Agregada pagina de ejemplo de login, registro. Modificado el controlador cliente y pago para funcionalidad.

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -72,7 +72,7 @@ ListAdministradorTitle_id=Id
 ListAdministradorTitle_nombre=Nombre
 ListAdministradorTitle_username=Username
 ListAdministradorTitle_password=Password
-ClienteCreated=Cliente was successfully created.
+ClienteCreated=Registro exitoso.
 ClienteUpdated=Cliente was successfully updated.
 ClienteDeleted=Cliente was successfully deleted.
 CreateClienteTitle=Create New Cliente
